--- a/tex/main.tex
+++ b/tex/main.tex
@@ -40,9 +40,9 @@
 
 \section*{Introduction}
 
-Emerging from the recent  COVID-19 pandemic that caused one of the most devastating disasters of the past century, a looming question is whether we can prepare, preempt and mitigate such events in  future. Evolving viruses, both currently circulating in the human population, and those in animal reservoirs that can attain human-to-human transmission capability, pose an ever-present risk.  Current surveillance paradigms, while crucial for mapping disease ecosystems, are limited in their ability to address this challenge. Habitat encroachment, climate change, and other ecological factors~\cite{rulli2017nexus,chua2002anthropogenic,childs2004zoonotic} unquestionably drive up the odds of zoonotic spill-over. Nevertheless, efforts at tracking these effects have not improved our ability to quantify future risk of emergence of a specific strain from a specific host~\cite{fair2019viral}. Tracking viral diversity in hosts such as bats, birds or swines, while important, might not transparently map to emergence risk.  This is particularly true for Influenza, which partly on account of its segmented genome, is particularly adept in incorporating genes from multiple strains and emerge as novel human strains, thus harboring a high pandemic potential. While large antigenic shifts have been relatively rare, the smaller seasonal sequence alterations in Influenza A cause enough variation in the surface proteins to evade existing immunity, and require yearly reformulation of the flu vaccine.
+Emerging from the recent  COVID-19 pandemic that caused one of the most devastating disasters of the past century, a looming question is whether we can prepare, preempt and mitigate such events in the future. Evolving viruses, whether currently circulating in the human population, or in animal reservoirs that can attain human-to-human transmission capability, pose an ever-present epidemic risk.  Current surveillance paradigms, while crucial for mapping disease ecosystems, are limited in their ability to address this challenge. Habitat encroachment, climate change, and other ecological factors~\cite{rulli2017nexus,chua2002anthropogenic,childs2004zoonotic} unquestionably drive up the odds of zoonotic spill-over. Nevertheless, efforts at tracking these effects have not improved our ability to quantify future risk of emergence of a specific strain from a specific host~\cite{fair2019viral}. Tracking viral diversity in hosts such as bats, birds or swines, while important, might not transparently map to emergence risk.  This is particularly true for Influenza, which partly on account of its segmented genome, can easily incorporate genes from multiple strains and emerge as novel human pathogens, thus harboring a high pandemic potential. While large antigenic shifts are relatively rare, even the smaller seasonal sequence alterations in Influenza A cause enough variation in the surface proteins to evade existing immunity, and require yearly reformulation of the flu vaccine.
 
-However, for the flu vaccine to be effective, one must predict the dominant circulating strain of the upcoming flu season. The current approach to such prediction, which is based on the dominant strain sampled about 6 months before the seasonal infection peak [REF], often has had limited success. The ability to rank order strains which do not yet circulate in humans is even more limited, while simultaneously being more important, potentially having the ability to spillover and cause a global pandemic.
+However, for the flu vaccine to be effective, one must predict the dominant circulating strain of the upcoming flu season. The current approach to such prediction, which is based on the dominant strain sampled about 6 months before the seasonal infection peak [REF], often has had limited success. The ability to rank order strains  which do not yet circulate in humans according to the risk of spillover is even more limited, while simultaneously being more important, since potentially having the ability to spillover and cause a global pandemic.
 
 A key barrier to making progress in this direction has been the missing ability to estimate the numerical likelihood of specific mutations in the future, and in general  the likelihood of a wild strain spontaneously giving rise to another by random chance. Currently, this likelihood is qualitatively equated to sequence similarity, which is measured by the number of mutations it takes to change one strain to another. However, the odds of one sequence mutating to another is not just a function of how many mutations separate them, but also of how specific mutations incrementally affect fitness. Ignoring the constraints arising from the need to conserve function makes any assessment of the mutation likelihood open to subjective bias. Here, we show that a precise calculation is possible when sequence similarity is evaluated via a new biologically-aware metric, which we call the \textit{q-distance}.
 
