--- a/tex/main.tex
+++ b/tex/main.tex
@@ -29,20 +29,17 @@
     \textbf{Abstract}
 \end{center}
 
-{\color{MediumBlue}
-  {\bf \sffamily \fontsize{10}{12}\selectfont \noindent
-    
-    Influenza viruses constantly evolve~\cite{dos2016influenza}, typically producing small sequence alterations over a time scale of months that sufficiently perturb surface protein structures to evade host immunity, and cause the  seasonal flu epidemic. Such antigenic drifts necessitate yearly innoculation of the population with a  reformulated  vaccine,  targeting the predicted dominant  strain of the upconimg flu season.  Mismatches between predicted and actual dominant strains dramatically reduce  vaccine effectiveness~\cite{tricco2013comparing}, and despite a serious  impact on global health from the recurring yearly infection spikes,   prediction of the dominant strain is often imperfect. Furthermore, novel strains emerging into humans from animal reservoirs,  aided by  recombination of genes from past human strains, pose the even graver threat of a global pandemic. Despite global biosurveillance to  collect wild specimens from diverse hosts and geolocations, our current ability to objectively, reliably and scalably  evaluate the risk posed to  humans by  individual strains  is limited.  In this study, we introduce a new machine learning algorithm to automatically parse out emergent evolutionary constraints operating on viral sequences in the wild, allowing us to predict the likelihood of specific future  mutations, thereby yielding the  numerical likelihood of specific  strains emerging through natural evolutionary processes. We show that our approach yields forecasts that  outperform  WHO recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the northern and the southern hemispheres. Additionally, we  replicate CDC's Influence Risk Assessment (IRAT) score for the pandemic potential of  influenza A viruses isolated from animal hosts. While  the IRAT evaluation for individual strains involves multiple experimental assays that typically take weeks to perform, our approach produces a highly correlated risk assessment in milliseconds. This dramatic reduction in time and cost potentially allows us to fully exploit current biosurvellinace capacity, scalably analyzing risk from  the tens of thousands of strains collected every year, and hence potentially deploy meaningful preemptive pandemic mitigation strategies. 
-  }
+  {\bf \sffamily \fontsize{10}{12}\selectfont \noindent   
+Influenza viruses constantly evolve~\cite{dos2016influenza}, typically producing small sequence alterations over a time scale of months  that sufficiently perturb surface protein structures to evade host immunity, and cause the  recurring seasonal flu epidemic. Such antigenic drifts necessitate yearly innoculation of the population with a  reformulated  vaccine,  targeting the predicted dominant  strain of the upcoming flu season.  Failing to predict the dominant strain  dramatically reduces  vaccine effectiveness~\cite{tricco2013comparing}, and despite a serious  impact on global health from the seasonal infection spikes, prediction of the dominant strain remains imperfect. Furthermore, novel strains emerging into humans from animal reservoirs, often aided by  recombination of genes from past human  strains, pose the even graver threat of a  pandemic. Despite global biosurveillance efforts to  collect wild specimens from diverse hosts and geo-locations, our current ability to objectively, reliably and scalably  evaluate the risk posed to  humans by  individual strains  is limited. In this study, we introduce a new machine learning algorithm to automatically parse out emergent evolutionary constraints operating on viral sequences in the wild, allowing us to predict the likelihood of specific future  mutations, and  yielding the  numerical likelihood of specific  strains emerging through natural evolutionary processes. We show that our approach yields forecasts that outperform WHO recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the northern and the southern hemispheres. Additionally, we replicate Center for Disease Control's (CDC) Influence Risk Assessment (IRAT) score for the pandemic potential of  \infl  viruses isolated from animal hosts. While the IRAT evaluation for individual strains involves multiple experimental assays that typically take weeks to perform, our approach produces a highly correlated risk assessment in seconds. This dramatic reduction in time and cost potentially allows us to fully exploit current biosurvellinace capacity, scalably analyzing risk from  the tens of thousands of strains collected every year, and hence potentially laying the foundation for  meaningful preemptive pandemic mitigation strategies. 
 }
 
 \vspace{10pt}
 
 \section*{Introduction}
+In the aftermath of the COVID-19 pandemic that caused one of the most devastating disasters of the past century, a looming question is whether we can prepare for, preempt and mitigate such events in the future. Evolving viruses, whether currently circulating in the human population, or in animal reservoirs that might spillover and attain human-to-human transmission capability, pose an ever-present epidemic risk.  Current surveillance paradigms, while crucial for mapping disease ecosystems, are limited in their ability to address this challenge. Habitat encroachment, climate change, and other ecological factors~\cite{rulli2017nexus,chua2002anthropogenic,childs2004zoonotic} unquestionably drive up the odds of zoonotic spill-overs. Nevertheless, current efforts at tracking these effects have not improved our ability to quantify future risk of emergence~\cite{fair2019viral}. Tracking viral diversity in animal hosts, while important, often does not transparently map to emergence risk.  This is particularly true for \infl, which partly on account of its segmented genome, can easily incorporate genes from multiple strains and emerge as novel human pathogens, and thus harbor a high pandemic potential. While large antigenic shifts in \infl are relatively rare, even the smaller seasonal sequence alterations in cause sufficient variation in the surface proteins to evade existing immunity, and require yearly reformulation of the flu vaccine.
 
-Emerging from the recent  COVID-19 pandemic that caused one of the most devastating disasters of the past century, a looming question is whether we can prepare, preempt and mitigate such events in the future. Evolving viruses, whether currently circulating in the human population, or in animal reservoirs that can attain human-to-human transmission capability, pose an ever-present epidemic risk.  Current surveillance paradigms, while crucial for mapping disease ecosystems, are limited in their ability to address this challenge. Habitat encroachment, climate change, and other ecological factors~\cite{rulli2017nexus,chua2002anthropogenic,childs2004zoonotic} unquestionably drive up the odds of zoonotic spill-over. Nevertheless, efforts at tracking these effects have not improved our ability to quantify future risk of emergence of a specific strain from a specific host~\cite{fair2019viral}. Tracking viral diversity in hosts such as bats, birds or swines, while important, might not transparently map to emergence risk.  This is particularly true for Influenza, which partly on account of its segmented genome, can easily incorporate genes from multiple strains and emerge as novel human pathogens, thus harboring a high pandemic potential. While large antigenic shifts are relatively rare, even the smaller seasonal sequence alterations in Influenza A cause enough variation in the surface proteins to evade existing immunity, and require yearly reformulation of the flu vaccine.
-
-However, for the flu vaccine to be effective, one must predict the dominant circulating strain of the upcoming flu season. The current approach to such prediction, which is based on the dominant strain sampled about 6 months before the seasonal infection peak [REF], often has had limited success. The ability to rank order strains  which do not yet circulate in humans according to the risk of spillover is even more limited, while simultaneously being more important, since potentially having the ability to spillover and cause a global pandemic.
+However, for the  vaccine to be effective, we need to  predict the dominant circulating strain of the upcoming season with sufficient accuracy.
+Currently, the composition of the flu shot is decided at least six months in advance of the seasonal infection peak, and targets three to four  historical strains as recommended by the CDC/WHO, who identify these specific strains by  sampling the current circulation~\cite{agor2018models}, hoping to match the  dominant strain(s) in the upcoming season. A variety of hard-to-model effects hinder this prediction, which, despite observed cross-reactive effects~\cite{tricco2013comparing}, have had  limited vaccine effectiveness in recent years~\cite{cdceff}. In addition, our current ability to rank-order strains which do not yet circulate in humans according to either their spillover risk or their pandemic potential, has proven to be even more elusive [REF]. CDC's current solution to this challenge is the Influenza Risk Assessment Tool (IRAT),  uses a combination of 10 weighted risk elements, grouped into three categories: 1) properties of the virus, 2) attributes of the population, and 3) ecology and epidemiology of the virus~\cite{Influenz24:online}.
 
 A key barrier to making progress in this direction has been the missing ability to estimate the numerical likelihood of specific mutations in the future, and in general  the likelihood of a wild strain spontaneously giving rise to another by random chance. Currently, this likelihood is qualitatively equated to sequence similarity, which is measured by the number of mutations it takes to change one strain to another. However, the odds of one sequence mutating to another is not just a function of how many mutations separate them, but also of how specific mutations incrementally affect fitness. Ignoring the constraints arising from the need to conserve function makes any assessment of the mutation likelihood open to subjective bias. Here, we show that a precise calculation is possible when sequence similarity is evaluated via a new biologically-aware metric, which we call the \textit{q-distance}.
 
